--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "moment": "^2.24.0",
